kubetoy/kubetoy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubetoy-deployment
  namespace: kubetoy
  labels:
    app: kubetoy-app
spec:
    selector:
      matchLabels:
        app: kubetoy
    replicas: 1
    template:
      metadata:
        labels:
          app: kubetoy
      spec:
        containers:
        - name: kubetoy
          image: docker.io/ibmicpcoc/kubetoy:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "1"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
          volumeMounts:
          - name: configvol
            mountPath: /var/config
          - name: secretvol
            mountPath: /var/secret
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
        volumes:
        - name: configvol
          configMap:
            name: kubetoy-configmap-files
        - name: secretvol
          secret:
            secretName: kubetoy-secret-files
