kubetoy/kubetoy_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubetoy-service
  namespace: kubetoy
  labels:
    app: kubetoy-app
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 3000
      protocol: TCP
      name: "http"
  selector:
    app: kubetoy
