kubetoy/kubetoy_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kubetoy
  namespace: kubetoy
  labels:
    app: kubetoy-app
spec:
  to:
    kind: Service
    name: kubetoy-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
